<resources>
    <string name="app_name">Truevault_rest_api</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="signup">SignUp</string>
    <string name="forgot">Forgot Password</string>
    <string name="Signin">SignIn</string>
    <string name="name">Full Name</string>
    <string name="gmail">Email</string>
    <string name="conform">Password</string>
    <string name="ConfirmPass">ConfirmPassword</string>
    <string name="submit">Submit</string>
    <string name="phone">Phone</string>
</resources>
